samples/_failures_safe/1761497497_4c8b23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d195f4b.c: In function ‘main’:
./samples/SAFE/__tmp_6d195f4b.c:155:46: error: expected ‘)’ at end of input
  155 |         input_buffer[input_size++] = (uint8_t
      |                                      ~       ^
      |                                              )
./samples/SAFE/__tmp_6d195f4b.c:155:9: error: expected declaration or statement at end of input
  155 |         input_buffer[input_size++] = (uint8_t
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_6d195f4b.c:155:9: error: expected declaration or statement at end of input
